<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_profile_name"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusDown="@+id/editText_first_nick" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView_first_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstNick"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_first_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusDown="@+id/editText_scnd_nick"
            android:nextFocusUp="@+id/editText_profile_name" />

        <TextView
            android:id="@+id/textView_scnd_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scndNick"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_scnd_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusDown="@+id/editText_third_nick"
            android:nextFocusUp="@+id/editText_first_nick" />

        <TextView
            android:id="@+id/textView_third_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdNick"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_third_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusDown="@+id/editText_username"
            android:nextFocusUp="@+id/editText_scnd_nick" />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusDown="@+id/editText_realname"
            android:nextFocusUp="@+id/editText_third_nick" />

        <TextView
            android:id="@+id/textView_realname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_realname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusUp="@+id/editText_realname" />
    </LinearLayout>

</ScrollView>