<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateServerActivity" >

    <LinearLayout
        android:id="@+id/linearLayoutAddServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TVServerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_server_name"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusDown="@+id/editText_host_name" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TVHostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_host_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textAutoCorrect"
            android:nextFocusDown="@+id/editText_server_port"
            android:nextFocusUp="@+id/editText_server_name" />

        <TextView
            android:id="@+id/TVServerPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverPort"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@+id/editText_server_password"
            android:nextFocusUp="@+id/editText_host_name" />

        <TextView
            android:id="@+id/TVServerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverPassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_server_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textPassword"
            android:nextFocusUp="@+id/editText_server_port" />
    </LinearLayout>

</ScrollView>